--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -8,13 +8,12 @@
   <div class="header">
   <div class="container">
     <img src="http://s3.amazonaws.com/codecademy-content/courses/learn-rails/img/logo-1tm.svg" width="80">
-    <h1>BokenjiKan</h1>
+    <h1>Add new category</h1>
   </div>
 </div>
 
 <div class="tag">
   <div class="container">
-    <h2>Add a new category</h2>
     <p>All the fields are mandatory</p>
     <%= form_for(@category) do |c| %>
       <div class="field">
