--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
 /* App */
+
+@import "bootstrap";
 
 html, body {
   margin: 0;
@@ -62,6 +62,10 @@ h2 a {
   right: 0;
   text-align: center;
   top: 25%;
+}
+
+.tag{
+  margin-top: 80px;
 }
 
 .tags img,
@@ -857,4 +861,9 @@ input, textarea{
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
+}
+
+footer{
+  background-color: #343a40;
+  color: #fff;
 }
