--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,13 +5,6 @@
   <title>Item</title>
 </head>
 <body>
-  <div class="header">
-  <div class="container">
-    <img src="http://s3.amazonaws.com/codecademy-content/courses/learn-rails/img/logo-1tm.svg" width="80">
-    <h1>Item</h1>
-  </div>
-</div>
-
 <div class="destination">
   <div class="container">
     <div class="row">
@@ -20,6 +13,7 @@
         <h2><%= @item.title.capitalize%> | <%= @item.price%></h2>
         <p><%= @item.description %></p>
         <%= link_to "Edit", edit_item_path(@item) %>
+        <%= link_to "Delete Item",item_path(@item),method: :delete, data: {confirm: "Are you sure?"} %>
       </div>
     </div>
   </div>
