--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,10 @@
             <li class="nav-item active">
               <%= link_to "Home", root_path, class: "nav-link" %>
             </li>
+
+
+
+
             <li class="nav-item">
               <%= link_to "Breakfast", "/categories/1", class: "nav-link" %>
             </li>
@@ -21,9 +25,18 @@
             <li class="nav-item">
               <%= link_to "Contact", "/categories/3", class: "nav-link" %>
             </li>
-            <li class="nav-item">
-              <%= link_to "Signin", "/categories/3", class: "nav-link" %>
-            </li>
+            <%if current_user%>
+              <li class="nav-item">
+                <%= link_to "Add Item", "/items_new",class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "logout", logout_path, method: "delete" ,class: "nav-link" %>
+              </li>
+            <%else%>
+              <li class="nav-item">
+                <%= link_to "Login", "/login", class: "nav-link" %>
+              </li>
+            <%end%>
           </ul>
         </div>
       </div>
