order now button update

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,7 +15,7 @@
     <div class="cards row">
       <% @categories.each do |c| %>
       <div class="card col-xs-4">
-        <%= image_tag c.image %>
+        <%=link_to( image_tag(c.image), category_path(c), {:style=>'background-color:transparent'}) %>
         <h2><%= c.title.capitalize %></h2>
         <p class="catdesc"><%= c.description %></p>
         <%= link_to "Check all #{c.title}" , category_path(c) %>
