--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,25 +10,20 @@
               <%= link_to "Home", root_path, class: "nav-link" %>
             </li>
 
+            <% @categories.each do |c|%>
+              <li class="nav-item">
+                <%= link_to "#{c.title}", category_path(c.id), class: "nav-link" %>
+              </li>
+            <%end%>
 
-
-
-            <li class="nav-item">
-              <%= link_to "Breakfast", "/categories/1", class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "HotSub", "/categories/2", class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ColdSub", "/categories/3", class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Contact", "/categories/3", class: "nav-link" %>
-            </li>
             <%if current_user%>
               <li class="nav-item">
                 <%= link_to "Add Item", "/items_new",class: "nav-link" %>
               </li>
+              <li class="nav-item">
+                <%= link_to "Add Item", "/categories_new",class: "nav-link" %>
+              </li>
+
               <li class="nav-item">
                 <%= link_to "logout", logout_path, method: "delete" ,class: "nav-link" %>
               </li>
