--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,19 @@
 
 @import "bootstrap";
 
+select {
+    border: 1px solid #ccc;
+    width: 30%;
+    font-size: 15px;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+
+
+
+
+
 html, body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
