--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,10 +95,10 @@ h2 a {
 
 .tag .card p {
   color: #0f0f0f;
-  font-size: 5px;
+  font-size: 20px;
   font-weight: 300;
   -webkit-box-orient: vertical;
-  padding: 0 20px 20px;
+  // padding: 0 20px 20px;
 }
 
 .destination img {
@@ -857,7 +857,7 @@ h2 a {
 @media (max-width: 600px) {
   .tags .card h2 {
     top: 5%;
-
+    font-size: 1rem;
   }
 
 
