--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,9 +15,9 @@
                 </li>
               <%end%>
             <%if current_user%>
-              <li class="nav-item">
+<!--               <li class="nav-item">
                 <%= link_to "Add Category", "/categories_new",class: "nav-link" %>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <%= link_to "Add Item", "/items_new",class: "nav-link" %>
               </li>
